# albion-dungeon-scanner

./: .env.base  .gitignore  LICENSE  README.md  app.py  pyproject.toml
scanner/: __init__.py
scanner/utils/: binary.py  config.py  logging.py  singleton.py
